Fix cart sidebar alignment and responsiveness

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -5,7 +5,7 @@
     top: 0;
     right: -400px;
     bottom: 0;
-    padding: 20px;
+    padding: 16px;
     box-shadow: hsl(0 0% 0% / 0.5) -4px -4px 8px;
     opacity: 0;
     transition: all 0.3s;
@@ -15,7 +15,7 @@
 
 .cart-sidebar.open {
     opacity: 1;
-    width: 30%;
+    width: max(30%, 300px);
     right: 0px;
 }
 
@@ -24,6 +24,8 @@
     width: 48px;
     height: 48px;
     font-size: 1rem;
+    border: 1px solid black;
+    color: black;
 }
 
 .cart-heading {
@@ -34,7 +36,7 @@
     height: 50%;
     width: 100%;
     overflow-y: scroll;
-    padding: 8px;
+    padding: 8px 0;
     border-top: 1px solid lightgray;
 }
 
@@ -60,7 +62,6 @@
         opacity: 1;
         top: 10%;
         height: 100%;
-        min-width: 100%;
-        max-width: fit-content;
+        width: fit-content;
     }
 }
